Fix mobile viewport: Center page and prevent scrolling on mobile devices

--- a/css/gameboard_mobile.css
+++ b/css/gameboard_mobile.css
@@ -1,21 +1,37 @@
 
 			
 			html, body {
+			  overflow: hidden;
 			  overflow-x: hidden;
 			  overflow-y: hidden;
-			  
 			  background-color: white;
-			  
+			  width: 100%;
+			  height: 100%;
+			  margin: 0;
+			  padding: 0;
+			  position: fixed;
+			  top: 0;
+			  left: 0;
+			  touch-action: none;
+			  -webkit-overflow-scrolling: none;
+			  overscroll-behavior: none;
 			}
 			
 			body{
 				background-color: white;
-				position: relative;
-				margin:0px;
-				padding:0px;
+				position: fixed;
+				margin: 0;
+				padding: 0;
 				border: 0;
-    			left: 0px;
-    			top: 0px; 
+				width: 100%;
+				height: 100%;
+				left: 0;
+				top: 0;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				overflow: hidden;
+				touch-action: none;
 			}	
 			
 			.tile{
